package Minecraft;

public class Espada {
    private int cantidadDeDaño;

    public int golpear() {
        return 10;
    }
}
